# PostDatabase

./: LICENSE  README.md  exemple.env  main.py  pyproject.toml
postdatabase/: consulta_sql.py
tests/: test_consulta_sql.py
